Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4879

NetVC leaks while hyper emergency occur on check_emergency_throttle()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.1, 7.0.0
    • Core
    • None

    Description

      The con could be closed if hyper emergency occur on check_emergency_throttle().

      But we did not check the con.fd while we get return from check_emergency_throttle().

      For hyper emergency:

      • The socket fd is removed from epoll while it is closed.
      • A NetVC with a closed socket fd is created and callback NET_EVENT_OPEN to SM.

      Thus:

      • The NetVC will never triggered by NetHandler.
      • Only InactivityCop could handle the NetVC and the default timeout value is 86400 secs.

      For the counter: net_connections_currently_open_stat

      • It is increased in “connect_re_internal()”
      • It isn't decreased while the con.fd set to NO_FD due to hyper emergency
      • Because it is decreased in close_UnixNetVConnection() only con.fd != NO_FD. (TS-4178)

      Attachments

        Activity

          People

            oknet Chao Xu
            oknet Chao Xu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 5h 10m
                5h 10m