TS-4879: Checking con.fd == NO_FD in UnixNetVConnection::connectUp() while we get return from check_emergency_throttle()

(cherry picked from commit 3216b0c1ff87a96a68f6a8a2a9fff804eb5819f1)